Add mongodb, Add frontend services, Remove Postgres
Add leads, add contacts

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,12 +1,5 @@
-# JPA
-spring.datasource.url=jdbc:postgresql://postgres/timely
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-
-spring.jpa.hibernate.ddl-auto=validate
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+spring.data.mongodb.grid-fs-database=files
+spring.data.mongodb.uri=mongodb://localhost/timely
 
 spring.security.user.name=superadmin
 spring.security.user.password=admin
