--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 version: "3"
 services:
-  postgres:
-    image: postgres:10
+  mongo:
+    image: mongo
     environment:
       - "POSTGRES_PASSWORD=postgres"
       - "POSTGRES_USER=postgres"
       - "POSTGRES_DB=timely"
     ports:
-      - "5432:5432"
+      - "27017:27017"
   redis:
     image: redis:4.0.11
     ports:
