--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -12,3 +12,5 @@ spring.session.redis.flush-mode=on-save
 spring.session.redis.namespace=spring:session
 spring.redis.host=localhost
 spring.redis.port=6379
+
+logging.level.org.springframework.security=INFO
