--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ repositories {
 
 
 dependencies {
+  compile group: 'com.github.slugify', name: 'slugify', version: '2.3'
   implementation("org.springframework.boot:spring-boot-starter-data-mongodb")
   implementation('org.springframework.session:spring-session-data-redis')
   implementation('org.springframework.boot:spring-boot-starter-data-redis')
